syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 4479
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message HomeChooseModuleReq {
	uint32 module_id = 2;
}
